@@ -184,6 +184,7 @@ production.
   up as a redirect to the linked page on Special:Whatlinkshere.
 * (bug 32609) API: Move captchaid/captchaword of action=edit from core
   to Captcha extension(s)
+* Added 'ApiGetDescription' hook.
 
 === Languages updated in 1.19 ===
 
